@@ -1,3 +1,4 @@
+2022-03-05: [GITHUB] Require PRs to update CHANGELOG
 2022-03-05: [BUGFIX] Fix tooltip only showing once
 2022-03-05: [BUGFIX] Better handling of empty menus in StatusNotifier widget
 2022-01-09: [FEATURE] Add SnapCast widget (missing some functionality)
